# YaxTech

./: README.md  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: ci-cd-pipeline.yml
Backend/: Dockerfile
Backend/App/: main.py
Backend/App/Api/v1/: api.py
Backend/App/Api/v1/Endpoints/: management.py  simulator.py
Backend/App/Core/: security.py
Backend/App/Db/: in_memory_db.py
Backend/App/Models/: mock_request.py
Frontend/: .env.example  .env.local  Dockerfile  package.json  tailwind.config.js  vite.config.js
Frontend/src/: App.jsx
Frontend/src/Components/: Header.jsx  MockCard.jsx  MockForm.jsx  Notification.jsx
Frontend/src/Services/: apiClient.js
Tests/: conftest.py  test_management_api.py  test_simulator_api.py
nginx/: Dockerfile  nginx.conf
